objects/A1_TrackerAPI_creds__mdt.object
<CustomObject>
    <description>Holds credentials for Agil1's tracker API.</description>
    <fields>
        <fullName>Base64__c</fullName>
        <label>Base64</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BrandId__c</fullName>
        <label>BrandId</label>
        <length>4</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TenantId__c</fullName>
        <label>TenantId</label>
        <length>2</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <label>Username</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>A1 TrackerAPI creds</label>
    <listViews>
        <fullName>all_fields</fullName>
        <columns>DeveloperName</columns>
        <columns>BrandId__c</columns>
        <columns>TenantId__c</columns>
        <columns>Username__c</columns>
        <columns>Password__c</columns>
        <columns>Base64__c</columns>
        <filterScope>Everything</filterScope>
        <label>all fields</label>
    </listViews>
    <pluralLabel>A1 TrackerAPI creds</pluralLabel>
</CustomObject>